# ai-realtime-travel-planner

./: README.md  pyproject.toml  report.md  requirements.txt
output/: budget_travel_plan.md  news_travel_report.md
src/realtime_travel_planner/: crew.py  main.py
src/realtime_travel_planner/config/: agents.yaml  tasks.yaml
