[project]
name = "realtime_travel_planner"
version = "0.1.0"
description = "realtime_travel_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
realtime_travel_planner = "realtime_travel_planner.main:run"
run_crew = "realtime_travel_planner.main:run"
train = "realtime_travel_planner.main:train"
replay = "realtime_travel_planner.main:replay"
test = "realtime_travel_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
